--- a/S_mar21_1AM_REGRSS2_unit2_spr1_mod2_212_assmnt.ipynb
+++ b/S_mar21_1AM_REGRSS2_unit2_spr1_mod2_212_assmnt.ipynb
@@ -1014,8 +1014,8 @@
         "colab": {}
       },
       "source": [
-        "#model.fit still gives ValueError: could not convert string to float: 'Yes'- change to 1 = Yes, 0 = No, or One Hot Encode\n",
-        "#trying type casting int64 to float with .astype()\n",
+        "#model.fit - NOT COMPLAINING ABOUT str types nomo\n",
+        "#trying type casting int64 to float with .astype() -maybe later if needed\n",
         "\n"
       ],
       "execution_count": 0,
@@ -1030,13 +1030,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5674f281-99db-430e-a20e-379e9fb432c4"
+        "outputId": "527e3639-4989-4927-c336-3385a0f1d0a7"
       },
       "source": [
         "#4a) fit model on TRAIN DATASET\n",
-        "model.fit(X_train_encoded, y_train) # ValueError: could not convert string to float: 'Yes'- change to 1 = Yes, 0 = No, or One Hot Encode"
+        "model.fit(X_train_encoded, y_train) #RETURNS: LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ],
-      "execution_count": 98,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 98
+          "execution_count": 102
         }
       ]
     },
@@ -1059,34 +1059,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 375
+          "height": 34
         },
-        "outputId": "e27baa3d-cf49-4bea-c7c7-d332b276de65"
+        "outputId": "68327532-47c5-484e-d5a7-1d456fba6146"
       },
       "source": [
         "# 5a) calculate Train error\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "\n",
-        "y_pred = model.predict(X_train) # get prediction of y target values \n",
+        "y_pred = model.predict(X_train_encoded) # get model prediction of y target values when model given X_train_encoded (x,y) values\n",
         "mae = mean_absolute_error(y_train, y_pred)\n",
         "print(f'Train Error: {mae:.2f} percentage points')"
       ],
-      "execution_count": 99,
+      "execution_count": 103,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-99-90dae1ee8277>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmean_absolute_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# get prediction of y target values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mmae\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmean_absolute_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Train Error: {mae:.2f} percentage points'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    223\u001b[0m             \u001b[0mReturns\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m         \"\"\"\n\u001b[0;32m--> 225\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_decision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m     \u001b[0m_preprocess_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstaticmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_preprocess_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36m_decision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    205\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 207\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coo'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    208\u001b[0m         return safe_sparse_dot(X, self.coef_.T,\n\u001b[1;32m    209\u001b[0m                                dense_output=True) + self.intercept_\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    529\u001b[0m                     \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcasting\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"unsafe\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    530\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 531\u001b[0;31m                     \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    532\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    533\u001b[0m                 raise ValueError(\"Complex data not supported\\n\"\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/core/_asarray.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \"\"\"\n\u001b[0;32m---> 85\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Yes'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Train Error: 892.75 percentage points\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1095,16 +1087,28 @@
       "metadata": {
         "id": "TWQxQ3Vf2Quj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7cb7a0d6-ba9c-4cd9-de49-f23d809bcbac"
       },
       "source": [
         "# 5b) calculate Test error\n",
-        "y_pred = model.predict(X_test)\n",
+        "y_pred = model.predict(X_test_encoded)\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
         "print(f'Test Error: {mae:.2f} percentage points')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Error: 908.90 percentage points\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1121,45 +1125,102 @@
       "metadata": {
         "id": "t3ydeDKl16tR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "50040422-b07a-4d6d-d106-ff812ad902c7"
       },
       "source": [
         " model.coef_, model.intercept_"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([ 809.94026987, -124.00739184,  124.00739184]), 1479.7297934572607)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 106
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "NKstCU-02B1R",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        },
+        "outputId": "653e5df3-dc31-4d8c-e01b-0d4f54c746f3"
       },
       "source": [
-        "# equation for the model\n",
+        "# equation for the model #ValueError: too many values to unpack (expected 2)\n",
         "beta0 = model.intercept_\n",
         "beta1, beta2 = model.coef_\n",
         "print(f'y = {beta0} + {beta1}x1 + {beta2}x2')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-114-604cec5b1857>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbeta0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintercept_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbeta1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'y = {beta0} + {beta1}x1 + {beta2}x2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "by7hArNu2Z2D",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 334
+        },
+        "outputId": "aa95b7ef-1e12-417d-ba5e-0197d521347e"
       },
       "source": [
         "# model's coefficients and intercept. \n",
         "print('Intercept', model.intercept_)\n",
-        "coefficients = pd.Series(model.coef_, features)\n",
+        "coefficients = pd.Series(model.coef_, features) #ValueError: Length of passed values is 3, index implies 48817\n",
         "print(coefficients.to_string())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Intercept 1479.7297934572607\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-116-6526ea5b98f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Intercept'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintercept_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcoefficients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#ValueError: Length of passed values is 3, index implies 48817\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoefficients\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[1;32m    300\u001b[0m                         raise ValueError(\n\u001b[1;32m    301\u001b[0m                             \u001b[0;34m\"Length of passed values is {val}, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 302\u001b[0;31m                             \u001b[0;34m\"index implies {ind}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    303\u001b[0m                         )\n\u001b[1;32m    304\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Length of passed values is 3, index implies 48817"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1176,13 +1237,17 @@
       "metadata": {
         "id": "porQxtpN1kqb",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "fd493a8f-19b0-44d9-83bb-6c5459a2398c"
       },
       "source": [
         "# Regression metrics for TRAIN data\n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
         "\n",
-        "y_pred = model.predict(X_train)\n",
+        "y_pred = model.predict(X_train_encoded)\n",
         "\n",
         "mse = mean_squared_error(y_train, y_pred)  #Mean squared error\n",
         "\n",
@@ -1197,19 +1262,34 @@
         "print('Mean Absolute Error:', mae)\n",
         "print('R^2:', r2)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mean Squared Error: 1796328.527978525\n",
+            "Root Mean Squared Error: 1340.2718112302912\n",
+            "Mean Absolute Error: 892.7500014972195\n",
+            "R^2: 0.4214775512737565\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "dfCGWAhS1qhk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "d427bb71-f8cb-4c0b-da24-2c7b96cf255e"
       },
       "source": [
         "# Regression metrics for TEST data\n",
-        "y_pred = model.predict(X_test) \n",
+        "y_pred = model.predict(X_test_encoded) \n",
         "\n",
         "mse = mean_squared_error(y_test, y_pred)  #Mean squared error\n",
         "\n",
@@ -1224,8 +1304,19 @@
         "print('Mean Absolute Error:', mae)\n",
         "print('R^2:', r2)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mean Squared Error: 1790872.1979243394\n",
+            "Root Mean Squared Error: 1338.2347319974697\n",
+            "Mean Absolute Error: 908.896086966682\n",
+            "R^2: 0.4237902370720539\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
