--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -433,6 +433,427 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h1a5TJ4cdvI6",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Do train/test split. Use data from January — March 2019 to train. Use data from April 2019 to test."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f0dpAx8JehSn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "8d39f5f9-ae02-4e97-ebcc-de16ab43c93f"
+      },
+      "source": [
+        "df_sub['SALE_DATE'] = pd.to_datetime(df_sub['SALE_DATE'])\n",
+        "df_sub['SALE_DATE'].dt.year.value_counts()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2019    3151\n",
+              "Name: SALE_DATE, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lf0SMQUzd4wn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 264
+        },
+        "outputId": "4b0550a0-063f-44ff-ee41-a95952e4ff58"
+      },
+      "source": [
+        "#test DataFrame\n",
+        "cond_test = df_sub['SALE_DATE'].dt.month == 4\n",
+        "df_test = df_sub[cond_test]\n",
+        "df_test.head(3)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BOROUGH</th>\n",
+              "      <th>NEIGHBORHOOD</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY</th>\n",
+              "      <th>TAX_CLASS_AT_PRESENT</th>\n",
+              "      <th>BLOCK</th>\n",
+              "      <th>LOT</th>\n",
+              "      <th>EASE-MENT</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT</th>\n",
+              "      <th>ADDRESS</th>\n",
+              "      <th>APARTMENT_NUMBER</th>\n",
+              "      <th>ZIP_CODE</th>\n",
+              "      <th>RESIDENTIAL_UNITS</th>\n",
+              "      <th>COMMERCIAL_UNITS</th>\n",
+              "      <th>TOTAL_UNITS</th>\n",
+              "      <th>LAND_SQUARE_FEET</th>\n",
+              "      <th>GROSS_SQUARE_FEET</th>\n",
+              "      <th>YEAR_BUILT</th>\n",
+              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>SALE_PRICE</th>\n",
+              "      <th>SALE_DATE</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>18235</th>\n",
+              "      <td>2</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5913</td>\n",
+              "      <td>878</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>4616 INDEPENDENCE AVENUE</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10471.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>5,000</td>\n",
+              "      <td>2272.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>895000</td>\n",
+              "      <td>2019-04-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18239</th>\n",
+              "      <td>2</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5488</td>\n",
+              "      <td>48</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A2</td>\n",
+              "      <td>558 ELLSWORTH AVENUE</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10465.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2,500</td>\n",
+              "      <td>720.0</td>\n",
+              "      <td>1935.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A2</td>\n",
+              "      <td>253500</td>\n",
+              "      <td>2019-04-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18244</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5936</td>\n",
+              "      <td>31</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>16 BAY RIDGE PARKWAY</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11209.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2,880</td>\n",
+              "      <td>2210.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>1300000</td>\n",
+              "      <td>2019-04-01</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      BOROUGH NEIGHBORHOOD  ... SALE_PRICE  SALE_DATE\n",
+              "18235       2        OTHER  ...     895000 2019-04-01\n",
+              "18239       2        OTHER  ...     253500 2019-04-01\n",
+              "18244       3        OTHER  ...    1300000 2019-04-01\n",
+              "\n",
+              "[3 rows x 21 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FCau6YmofpdR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 247
+        },
+        "outputId": "b3e960da-a490-4f9a-f2d0-5ac72e564564"
+      },
+      "source": [
+        "#training DataFrame\n",
+        "cond_train = df_sub['SALE_DATE'].dt.month <= 3\n",
+        "df_train = df_sub[cond_train]\n",
+        "df_train.head(3)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BOROUGH</th>\n",
+              "      <th>NEIGHBORHOOD</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY</th>\n",
+              "      <th>TAX_CLASS_AT_PRESENT</th>\n",
+              "      <th>BLOCK</th>\n",
+              "      <th>LOT</th>\n",
+              "      <th>EASE-MENT</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT</th>\n",
+              "      <th>ADDRESS</th>\n",
+              "      <th>APARTMENT_NUMBER</th>\n",
+              "      <th>ZIP_CODE</th>\n",
+              "      <th>RESIDENTIAL_UNITS</th>\n",
+              "      <th>COMMERCIAL_UNITS</th>\n",
+              "      <th>TOTAL_UNITS</th>\n",
+              "      <th>LAND_SQUARE_FEET</th>\n",
+              "      <th>GROSS_SQUARE_FEET</th>\n",
+              "      <th>YEAR_BUILT</th>\n",
+              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>SALE_PRICE</th>\n",
+              "      <th>SALE_DATE</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>44</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5495</td>\n",
+              "      <td>801</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A9</td>\n",
+              "      <td>4832 BAY PARKWAY</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11230.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>6,800</td>\n",
+              "      <td>1325.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A9</td>\n",
+              "      <td>550000</td>\n",
+              "      <td>2019-01-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61</th>\n",
+              "      <td>4</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7918</td>\n",
+              "      <td>72</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>80-23 232ND STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11427.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4,000</td>\n",
+              "      <td>2001.0</td>\n",
+              "      <td>1940.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>200000</td>\n",
+              "      <td>2019-01-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>78</th>\n",
+              "      <td>2</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4210</td>\n",
+              "      <td>19</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>1260 RHINELANDER AVE</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10461.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>3,500</td>\n",
+              "      <td>2043.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>810000</td>\n",
+              "      <td>2019-01-02</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   BOROUGH NEIGHBORHOOD  ... SALE_PRICE  SALE_DATE\n",
+              "44       3        OTHER  ...     550000 2019-01-01\n",
+              "61       4        OTHER  ...     200000 2019-01-01\n",
+              "78       2        OTHER  ...     810000 2019-01-02\n",
+              "\n",
+              "[3 rows x 21 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QvDfsr-GgMCC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "09206232-31d5-4e61-d460-d1c815354745"
+      },
+      "source": [
+        "df_train.shape, df_test.shape"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2507, 21), (644, 21))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F8i6_17dgZHu",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Do one-hot encoding of categorical features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JVlzO_lqgbL3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
